--- a/HealthcareApp/Views/Attendance/Details.cshtml
+++ b/HealthcareApp/Views/Attendance/Details.cshtml
@@ -1,1 +1,35 @@
-﻿
+﻿@using HealthcareApp.Services.ViewModels;
+@model AttendanceViewModel
+
+@{
+    ViewData["Title"] = "Details";
+}
+
+<h1 class="mb-5">Details</h1>
+
+<table class="table">
+  <tbody>
+    <tr>
+      <th scope="row">Patient name:</th>
+      <td>@Model.PatientName</td>
+    </tr>
+    <tr>
+      <th scope="row">Doctor name:</th>
+      <td>@Model.DoctorName</td>
+    </tr>
+    <tr>
+        <th scope="row">Diagnosis:</th>
+        <td>@Model.Diagnosis</td>
+    </tr>
+    <tr>
+        <th scope="row">Medication:</th>
+        <td>@Model.MedicationName</td>
+    </tr>
+    <tr>
+        <th scope="row">Date:</th>
+        <td>@Model.Date</td>
+    </tr>
+   </tbody>
+</table>
+
+<a asp-action="Index" type="button" class="btn btn-secondary">Back to List</a>
