--- a/HealthcareApp/Views/Shared/_Layout.cshtml
+++ b/HealthcareApp/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                                 <a class="nav-link text-dark" asp-controller="Appointment" asp-action="Index">Appointments</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Attendance" asp-action="Create">Attendances</a>
+                                <a class="nav-link text-dark" asp-controller="Attendance" asp-action="Index">Attendances</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Medication" asp-action="Index">Medications</a>
